--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -22,7 +22,7 @@
     <td th:text="${car.tankVolume}"></td>
   </tr>
   <tr>
-    <td>License number plate</td>
+    <td>Number of seats</td>
     <td th:text="${car.numberOfSeats}"></td>
   </tr>
 </table>
