--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -6,18 +6,19 @@
 </head>
 <body>
 <h1 th:text="${edit ? 'Edit Car' : 'Create Car'}"></h1>
-<form th:object="${car}" th:action="@{'/save'}" method="post">
+<form th:action="@{'/save'}" method="post" th:object="${car}">
+  <input type="hidden" th:field="*{id}">
   <p>
-    License Plate Number: <input type="text" th:field="*{spz}" th:readonly="${edit}">
+    License Plate Number: <input type="text" th:field="*{spz}">
   </p>
   <p>
     Color: <input type="text" th:field="*{color}">
   </p>
   <p>
-    Tank Volume: <input type="text" th:field="*{tankVolume}">
+    Tank Volume: <input type="number" th:field="*{tankVolume}">
   </p>
   <p>
-    Number Of Seats: <input type="text" th:field="*{numberOfSeats}">
+    Number Of Seats: <input type="number" th:field="*{numberOfSeats}">
   </p>
   <button type="submit">Save</button>
 </form>
